--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "repository": "git@github.com:brave-intl/bat-ratios.git",
   "license": "ISC",
   "dependencies": {
-    "@brave-intl/currency": "^1.4.4",
+    "@brave-intl/currency": "^1.4.8",
     "@sentry/node": "^4.6.6",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
@@ -38,8 +38,8 @@
     "joi": "^13.7.0",
     "joi-to-json-schema": "^3.5.0",
     "json2csv": "^4.5.0",
-    "lodash": "^4.17.11",
-    "pg": "^7.10.0",
+    "lodash": "^4.17.15",
+    "pg": "^7.12.0",
     "prom-client": "^11.3.0",
     "uuid": "^3.3.2"
   },
@@ -48,7 +48,7 @@
     "babel-eslint": "^9.0.0",
     "husky": "^0.14.3",
     "nodemon": "^1.18.11",
-    "standard": "*",
+    "standard": "^13.1.0",
     "supertest": "^3.4.1",
     "swagger-ui-express": "^4.0.2"
   },
